# mcp

./: .gitignore  docker-network.txt  gcp.md
api/go-school-list/: go.mod  (+3 more)
api/school_rag_api/: Dockerfile  conversation_memory.json  crawler.py  dockerfile.gcp  main.py  output  preprocess.py  pyproject.toml  school_chat_api.py
api/school_rag_api/website_content/: scrape_summary.json
api/school_rag_api/website_content/ERAU/: daytonabeach.erau.edu.json  erau.edu_degrees_bachelor_aerospace-engineering.json  erau.edu_degrees_bachelor_mechanical-engineering.json
api/school_rag_api/website_content/ERAU/chunks/: daytonabeach.erau.edu.json_chunk.jsonl  daytonabeach.erau.edu_admissions_apply.json_chunk.jsonl  daytonabeach.erau.edu_admissions_estimated-costs.json_chunk.jsonl  (+5 more)
api/school_rag_api/website_content/TAMU/: aggie.tamu.edu_financial-aid_types-of-aid_scholarships_undergraduate-scholarships.json  engineering.tamu.edu_aerospace_index.html.json  www.tamu.edu.json
api/school_rag_api/website_content/University of Colorado -BOULDER/: www.colorado.edu_about_rankings-achievements.json  www.colorado.edu_academics_bs-aerospace-engineering.json  www.colorado.edu_admissions_process_first-year_faqs.json  www.colorado.edu_admissions_process_first-year_plan.json  www.colorado.edu_career_internships.json  www.colorado.edu_resources_life-cu-boulder.json
client/: main.py  mcp_client.py  mcp_client_chat.py  pyproject.toml
servers/school_server/: Dockerfile  pyproject.toml  school_list.py
servers/school_server/stdio/: Dockerfile  config.json  pyproject.toml  school_list_stdio.py
(+27 files in other folders)
