[project]
name = "school-rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "cohere>=5.15.0",
    "dotenv-python>=0.0.1",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
    "uvicorn[standard]>=0.34.2",
    "voyageai>=0.3.2",
]
